
- 28/12/2017

	- update to b18
	- changed researchprojectsdefs,terraindefs to <Defs>
	- adjusted case sensitive xml tags
	- adjusted ressoucebase abstract beauty to -4
	- compiled source again, added and adjusted map in placeworker allow
	- removed changeable in vanilla patch for vanilla terrains

- 30/12/2017

	- added researchtab

- 01/01/2018

	- updated about file, since the patchoperations rarely cause problems

- 06/01/2018

	- added the changeable remove per patchoperation sequenze, the removal made buildign on deep water impossable XD

- 14/01/2018

	- added modsyn file

- 25/01/2018

	- added code for drawbridge and xmls
	- added version in about file+synceed with mod sync and github to get same version number in all (b18-1.1.0)
	- added drawbridge textures + Ui textures (removed minifiable intentional, since it causes some problems)
	- added sort of placeworker check when changing drawbridge state to check for mater+marsh tiles on both base and bridge tile
	- added keyed translation xml for drawbridge UI and for older placeworker so you can now translate the error messages too^^
	- added never multiselect to drawbridges, since it couses some issues with the toggle (kinda harmless error, but red text)

- 14/02/2018

	- changed terraforming to building that spawns ground, removed all the old terrain
	- changed dragable dimensions of bridges to 2, so you can now build them floor like
	- set modsync to savebreaking
	- added modcheck
	- added terraform symbol for building, that is shown when setting blueprints (shovel)

- 15/02/2018

	- made old terrain patches "invisible"
	- still all old terrainchecks to retain compatibility

- 22/02/2018

	- added small fix for grandrivers

- 10/07/2018

	- added small fix for buildable terrain b18

- 03/11/2018

	- 1.0 rimworld update
	- assembly update
	- xml stuff updated
	- set foundationmaterial hitpoints to 250
	- set pontonbridge to 350
	- set cover from drawbridge to 0.7 down and 0.9 up