@@ -125,3 +125,7 @@ personal changelog for mod "bridges"
 	- set foundationmaterial hitpoints to 250
 	- set pontonbridge to 350
 	- set cover from drawbridge to 0.7 down and 0.9 up
+
+- 22/11/2018
+
+	- removed layerable from terrains
